feat: add record labor registration
